Fix: remove extra padding from app container

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   background-color: var(--background_primary);
-  padding: 5px 10px;
+  padding: 0 10px;
   overflow-x: hidden;
 }
 .list__gifs {
