--- a/src/components/Home/Header/_header.css
+++ b/src/components/Home/Header/_header.css
@@ -6,6 +6,8 @@
   z-index: 10;
   position: absolute;
   right: -100%;
+  margin: 0;
+  padding: 0;
 }
 @keyframes showMenu {
   0% {
